--- a/main.css
+++ b/main.css
@@ -15,12 +15,22 @@ h1, h2, h3, h4 {
     font-weight: 500;
 }
 
+h3 {
+    font-size: 25px;
+    color: #7cbb00;
+}
+
 /* UTILITIES */
 
 /*Layout*/
 .container {
     width: 1200px;
     margin: 0 auto;
+}
+/*ripetizione(so di poterla evitare)*/
+.content {
+    width: 1200px;
+    margin: 0px auto;
 }
 
 .clearfix::after {
@@ -143,7 +153,6 @@ h1, h2, h3, h4 {
     text-align: center;
     height: 150px;
     background-color: #d3d3d3;
-    
 }
 
 .description h1 {
@@ -155,4 +164,38 @@ h1, h2, h3, h4 {
 
 .description p {
     font-size: 20px;
+}
+
+/* WEB INFO*/
+.content .imgs {
+    padding-top: 50px;
+    margin-bottom: 20px;
+    width: 270px;
+    height: 200px;
+    display: inline-block;
+}
+
+.content .imgs img{
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+}
+
+.content-left {
+    width: 30%;
+}
+.content-center {
+    width: 30%;
+    margin-right: 4.5%;
+    margin-left: 4.5%;
+}
+
+.content-right {
+   width: 30%;
+}
+
+.content-left,
+.content-center,
+.content-right {
+    text-align: center;
 }
