--- a/main.css
+++ b/main.css
@@ -27,11 +27,6 @@ h3 {
     width: 1200px;
     margin: 0 auto;
 }
-/*ripetizione(so di poterla evitare)*/
-.content {
-    width: 1200px;
-    margin: 0px auto;
-}
 
 .clearfix::after {
     content: '';
@@ -167,7 +162,7 @@ h3 {
 }
 
 /* WEB INFO*/
-.content .imgs {
+.container .imgs {
     padding-top: 50px;
     margin-bottom: 20px;
     width: 270px;
@@ -175,7 +170,7 @@ h3 {
     display: inline-block;
 }
 
-.content .imgs img{
+.container .imgs img{
     width: 100%;
     height: 100%;
     background-size: contain;
@@ -280,6 +275,7 @@ hr {
     position: fixed;
     right: 1%;
     bottom: -5px;
+    border-radius: 5% 5% 0 0;
 }
 
 .help a {
